--- a/index.html
+++ b/index.html
@@ -150,6 +150,17 @@
 											<p>We are grateful to all those who generously contribute to the support of our life and ministry. Your donation can help us to continue to serve God and our neighbor for many years to come. Please be assured of our prayers for you, your families and loved ones. Thank you!</p>
 											<p>The Red Bank Oratory-in-Formation is a 501(c)3 non-profit. Contributions are tax-deductible.</p>
 											<p>How do I make a donation?</p>
+											<p>You can use Paypal or write a check:</p>
+											<p><form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+												<input type="hidden" name="cmd" value="_s-xclick">
+												<input type="hidden" name="hosted_button_id" value="42X6S69Q2AUR2">
+												<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+												<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+												</form>
+											</p>
+
+
+
 											<p>Checks can be made out to: The Red Bank Oratory</p>
 											<p>Please mail your donation to:</p>
 											<p>The Red Bank Oratory of St. Philip Neri (In-Formation)</p>
